force-app/main/default/objects/Opportunity/fields/AV_Subestado__c.field-meta.xml
<CustomField>
    <fullName>AV_Subestado__c</fullName>
    <description>Subestado de la oportunidad</description>
    <label>Subestado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetName>AV_Subestado</valueSetName>
    </valueSet>
</CustomField>