force-app/main/default/objects/Opportunity/fields/AV_Tenencia__c.field-meta.xml
<CustomField>
    <fullName>AV_Tenencia__c</fullName>
    <description>Tenencia de la oportunidad</description>
    <label>¿En otra entidad/compañía?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X</fullName>
                <label>Desconocido</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Sí</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>