force-app/main/default/objects/Opportunity/fields/AV_TipoInteres__c.field-meta.xml
<CustomField>
    <fullName>AV_TipoInteres__c</fullName>
    <description>Tipo de interés que aplica</description>
    <label>Tipo de Interés</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>