force-app/main/default/objects/Opportunity/fields/AV_Valor2__c.field-meta.xml
<CustomField>
    <fullName>AV_Valor2__c</fullName>
    <description>Valor 2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>-</label>
    <length>255</length>
    <type>Text</type>
</CustomField>