force-app/main/default/objects/Opportunity/fields/CIBE_AlgunaOperRAR__c.field-meta.xml
<CustomField>
    <fullName>CIBE_AlgunaOperRAR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo del componente de listado de la Oportunidad CIB</description>
    <label>Alguna Oper. RAR&lt;15%</label>
    <type>Checkbox</type>
</CustomField>