force-app/main/default/objects/Opportunity/fields/CIBE_ALM__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ALM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ALM</label>
    <type>Checkbox</type>
</CustomField>