force-app/main/default/objects/Opportunity/fields/CIBE_AmountDivisa__c.field-meta.xml
<CustomField>
    <fullName>CIBE_AmountDivisa__c</fullName>
    <label>Importe</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>