force-app/main/default/objects/Opportunity/fields/CIBE_AmountEuro__c.field-meta.xml
<CustomField>
    <fullName>CIBE_AmountEuro__c</fullName>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe €</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>