force-app/main/default/objects/Opportunity/fields/CIBE_AnalystTeam__c.field-meta.xml
<CustomField>
    <fullName>CIBE_AnalystTeam__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Analyst Team</label>
    <type>Checkbox</type>
</CustomField>