force-app/main/default/objects/Opportunity/fields/CIBE_ApprovalRisk__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ApprovalRisk__c</fullName>
    <label>Aprobación de riesgo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente aprobación</fullName>
                <default>true</default>
                <label>Pendiente aprobación</label>
            </value>
            <value>
                <fullName>No requiere</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Aprobado con reservas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>