force-app/main/default/objects/Opportunity/fields/CIBE_ApproveDate__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ApproveDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha aprobación</label>
    <type>Date</type>
</CustomField>