force-app/main/default/objects/Opportunity/fields/CIBE_Aprobadoriesgos__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Aprobadoriesgos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobado riesgos</label>
    <type>Checkbox</type>
</CustomField>