force-app/main/default/objects/Opportunity/fields/CIBE_Balance__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Balance__c</fullName>
    <inlineHelpText>Amount of Impact on Balance Sheet</inlineHelpText>
    <label>Impacto en balance €</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>