force-app/main/default/objects/Opportunity/fields/CIBE_BalanceDivisa__c.field-meta.xml
<CustomField>
    <fullName>CIBE_BalanceDivisa__c</fullName>
    <label>Impacto en balance</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>