force-app/main/default/objects/Opportunity/fields/CIBE_Cartera__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Cartera__c</fullName>
    <description>Cartera del gestor CIB asociado a la jerarquía interna de CIB</description>
    <label>Cartera</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Energy Corporates</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Energy Renewables</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Construction &amp; Infraestructure I</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Construction &amp; Infraestructure II</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Real Estate</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>TMTs</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>Engineering &amp; Environmental</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>Auto, Shipping &amp; Logistics</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>Retail, Consumer Goods &amp; Logistics</label>
            </value>
            <value>
                <fullName>010</fullName>
                <label>Transport, Building Materials &amp; IT</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>Healthcare</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>Food &amp; Beverage</label>
            </value>
            <value>
                <fullName>013</fullName>
                <label>FIG</label>
            </value>
            <value>
                <fullName>014</fullName>
                <label>Bancos - Latam y Europa</label>
            </value>
            <value>
                <fullName>015</fullName>
                <label>Bancos - Asia y Oriente Medio</label>
            </value>
            <value>
                <fullName>016</fullName>
                <label>Bancos - Africa y Norteamerica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>