force-app/main/default/objects/Opportunity/fields/CIBE_CerradoNegativo__c.field-meta.xml
<CustomField>
    <fullName>CIBE_CerradoNegativo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anulada</fullName>
            </value>
            <value>
                <fullName>Competencia</fullName>
            </value>
            <value>
                <fullName>Desistida cliente</fullName>
            </value>
            <value>
                <fullName>Desistida comité sucursal/oficina</fullName>
                <label>Desistida oficina</label>
            </value>
            <value>
                <fullName>Producto</fullName>
            </value>
            <value>
                <fullName>Riesgos</fullName>
            </value>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Denegada por Política ESG</fullName>
                <label>Denegada por Políticas de Financiación Sostenible</label>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>No volver a ofrecer  el producto</fullName>
            </value>
            <value>
                <fullName>No gestionada</fullName>
            </value>
            <value>
                <fullName>Riesgo / CPC</fullName>
                <isActive>false</isActive>
                <label>Riesgo / CPC</label>
            </value>
            <value>
                <fullName>Riesgo RAR</fullName>
                <isActive>false</isActive>
                <label>Riesgo RAR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>