force-app/main/default/objects/Opportunity/fields/CIBE_ChiefOperationsOfficer__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ChiefOperationsOfficer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chief Operations Officer</label>
    <type>Checkbox</type>
</CustomField>