force-app/main/default/objects/Opportunity/fields/CIBE_Comisiones__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Comisiones__c</fullName>
    <inlineHelpText>Estimated commissions in the opportunity closing month</inlineHelpText>
    <label>Impacto en com. upfront / firma €</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>