force-app/main/default/objects/Opportunity/fields/CIBE_ComisionesDivisa__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ComisionesDivisa__c</fullName>
    <label>Impacto en com. upfront / firma</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>