force-app/main/default/objects/Opportunity/fields/CIBE_ComisionSaldoMedio__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ComisionSaldoMedio__c</fullName>
    <description>Porcentaje de la comisión de estudio. Integración RAR.</description>
    <label>Comisión saldo medio no dispuesto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>