force-app/main/default/objects/Opportunity/fields/CIBE_DateALM__c.field-meta.xml
<CustomField>
    <fullName>CIBE_DateALM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Update</label>
    <type>Date</type>
</CustomField>