force-app/main/default/objects/Opportunity/fields/CIBE_DiasUltimaGestion__c.field-meta.xml
<CustomField>
    <fullName>CIBE_DiasUltimaGestion__c</fullName>
    <description>Días desde la última modificación de la oportunidad</description>
    <formula>IF((AV_FechaModificacion__c &lt; TODAY()), TODAY() - AV_FechaModificacion__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días ult. gestión</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>