force-app/main/default/objects/Opportunity/fields/CIBE_DicALMComment__c.field-meta.xml
<CustomField>
    <fullName>CIBE_DicALMComment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ALM opinion comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>