force-app/main/default/objects/Opportunity/fields/CIBE_DicALMEmployee__c.field-meta.xml
<CustomField>
    <fullName>CIBE_DicALMEmployee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (ALM opinion employee)</relationshipLabel>
    <relationshipName>OpportunitiesContact</relationshipName>
    <type>Lookup</type>
</CustomField>