force-app/main/default/objects/Opportunity/fields/CIBE_DocumentFile__c.field-meta.xml
<CustomField>
    <fullName>CIBE_DocumentFile__c</fullName>
    <description>Formula que genera el enlace Expediente Documental</description>
    <formula>IMAGE(&quot;/resource/CIBE_imgNewWindow&quot;, &quot;New Window&quot;, 15, 15)&amp;&quot; &quot;&amp;
HYPERLINK(SUBSTITUTE($CustomMetadata.CIBE_Link__mdt.CIBE_ExpedienteDocumental.CIBE_URL__c, &apos;{idPeticion}&apos;, CIBE_NumberExpedient__c), $Label.CIBE_ExpedienteDocumental)</formula>
    <label>Document File Link</label>
    <type>Text</type>
</CustomField>