force-app/main/default/objects/Opportunity/fields/CIBE_ECAs__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ECAs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo del componente de listado de la Oportunidad CIB</description>
    <label>ECAs</label>
    <type>Checkbox</type>
</CustomField>