force-app/main/default/objects/Opportunity/fields/CIBE_EnCurso__c.field-meta.xml
<CustomField>
    <fullName>CIBE_EnCurso__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En tramite</fullName>
            </value>
            <value>
                <fullName>Aprobada, pendiente de firma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>