force-app/main/default/objects/Opportunity/fields/CIBE_ESG__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ESG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ESG</label>
    <type>Checkbox</type>
</CustomField>