force-app/main/default/objects/Opportunity/fields/CIBE_Familia__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Familia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Familia CIB</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CIBE_Familia</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities (Familia)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>