force-app/main/default/objects/Opportunity/fields/CIBE_Fechaaprobacionprecio__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Fechaaprobacionprecio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha aprobación precio</label>
    <type>Date</type>
</CustomField>