force-app/main/default/objects/Opportunity/fields/CIBE_FechaCambioDivisa__c.field-meta.xml
<CustomField>
    <fullName>CIBE_FechaCambioDivisa__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha tipo de cambio</label>
    <type>Date</type>
</CustomField>