force-app/main/default/objects/Opportunity/fields/CIBE_GrupoComercial__c.field-meta.xml
<CustomField>
    <fullName>CIBE_GrupoComercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo Comercial</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La cuenta asociada a la oportunidad no es de tipo grupo comercial.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Grupo Comercial</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Grupo Comercial)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>