force-app/main/default/objects/Opportunity/fields/CIBE_Impacto_Balance_Cierre_Anio__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Impacto_Balance_Cierre_Anio__c</fullName>
    <label>Impacto en balance fin de año €</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>