force-app/main/default/objects/Opportunity/fields/CIBE_Impacto_Comisiones_Cierre_Anio__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Impacto_Comisiones_Cierre_Anio__c</fullName>
    <label>Impacto com. upfront / firma fin año €</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>