force-app/main/default/objects/Opportunity/fields/CIBE_ImpactoDIvisaBalanceCierreAnio__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ImpactoDIvisaBalanceCierreAnio__c</fullName>
    <label>Impacto en balance fin de año</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>