force-app/main/default/objects/Opportunity/fields/CIBE_ImpactoDivisaComisionesCierreAnio__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ImpactoDivisaComisionesCierreAnio__c</fullName>
    <label>Impacto com. upfront / firma fin año</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>