force-app/main/default/objects/Opportunity/fields/CIBE_ImporteOtraEntidad__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ImporteOtraEntidad__c</fullName>
    <label>Importe</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>