force-app/main/default/objects/Opportunity/fields/CIBE_JSONRAROperations__c.field-meta.xml
<CustomField>
    <fullName>CIBE_JSONRAROperations__c</fullName>
    <description>JSON de las operaciones cargadas de la integración RAR.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CIBE_JSONRAROperations</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>