force-app/main/default/objects/Opportunity/fields/CIBE_LastStageModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>CIBE_LastStageModifiedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LastStageModifiedDate</label>
    <type>DateTime</type>
</CustomField>