force-app/main/default/objects/Opportunity/fields/CIBE_LastUpdatedCerradoNegativo__c.field-meta.xml
<CustomField>
    <fullName>CIBE_LastUpdatedCerradoNegativo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>