force-app/main/default/objects/Opportunity/fields/CIBE_LoanSyndicateSales__c.field-meta.xml
<CustomField>
    <fullName>CIBE_LoanSyndicateSales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Syndicate &amp; Sales</label>
    <type>Checkbox</type>
</CustomField>