force-app/main/default/objects/Opportunity/fields/CIBE_NextMeetingDate__c.field-meta.xml
<CustomField>
    <fullName>CIBE_NextMeetingDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha próx. Cita</label>
    <type>Date</type>
</CustomField>