force-app/main/default/objects/Opportunity/fields/CIBE_Nivel__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Nivel__c</fullName>
    <description>Campo del componente de listado de la Oportunidad CIB</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nivel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>