force-app/main/default/objects/Opportunity/fields/CIBE_NumeroUnidades__c.field-meta.xml
<CustomField>
    <fullName>CIBE_NumeroUnidades__c</fullName>
    <label>Nº Unidades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>