force-app/main/default/objects/Opportunity/fields/CIBE_Observaciones__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Observaciones__c</fullName>
    <description>Campo del componente de listado de la Oportunidad CIB</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Observaciones</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>