force-app/main/default/objects/Opportunity/fields/CIBE_Observacionesprecio__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Observacionesprecio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Observaciones precio</label>
    <type>TextArea</type>
</CustomField>