force-app/main/default/objects/Opportunity/fields/CIBE_Observacionesriesgo__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Observacionesriesgo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Observaciones riesgo</label>
    <type>TextArea</type>
</CustomField>