force-app/main/default/objects/Opportunity/fields/CIBE_OperationPeriod__c.field-meta.xml
<CustomField>
    <fullName>CIBE_OperationPeriod__c</fullName>
    <inlineHelpText>The duration expressed in years with one decimal</inlineHelpText>
    <label>Deadline of the Opportunity</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>