force-app/main/default/objects/Opportunity/fields/CIBE_OperationTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>CIBE_OperationTotalAmount__c</fullName>
    <label>Total amount of the deal in market</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>