force-app/main/default/objects/Opportunity/fields/CIBE_OpportunityTeam__c.field-meta.xml
<CustomField>
    <fullName>CIBE_OpportunityTeam__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>