force-app/main/default/objects/Opportunity/fields/CIBE_OpportunityTeamMember__c.field-meta.xml
<CustomField>
    <fullName>CIBE_OpportunityTeamMember__c</fullName>
    <formula>IF(
	CONTAINS( 
		CIBE_OpportunityTeam__c  , $User.Id )  ||   OwnerId = $User.Id,
		true, false
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is a member of the opportunity team</label>
    <type>Checkbox</type>
</CustomField>