force-app/main/default/objects/Opportunity/fields/CIBE_Pais__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Pais__c</fullName>
    <label>País</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OS_Paises</valueSetName>
    </valueSet>
</CustomField>