force-app/main/default/objects/Opportunity/fields/CIBE_PDRating__c.field-meta.xml
<CustomField>
    <fullName>CIBE_PDRating__c</fullName>
    <formula>text( round(CIBE_RARPD__c, 3) ) + &apos; &apos; + CIBE_RatingPD__c</formula>
    <label>PD rating</label>
    <type>Text</type>
</CustomField>