force-app/main/default/objects/Opportunity/fields/CIBE_ProbabilidadExito__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ProbabilidadExito__c</fullName>
    <label>Probabilidad de éxito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
                <default>true</default>
                <label>Media</label>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>