force-app/main/default/objects/Opportunity/fields/CIBE_ProductName__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ProductName__c</fullName>
    <formula>AV_PF__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto</label>
    <type>Text</type>
</CustomField>