force-app/main/default/objects/Opportunity/fields/CIBE_RARComision12meses__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RARComision12meses__c</fullName>
    <label>Comisión últ. 12 meses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>