force-app/main/default/objects/Opportunity/fields/CIBE_RARComisionApertura__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RARComisionApertura__c</fullName>
    <description>Porcentaje de la comisión de apertura. Integración RAR.</description>
    <label>Comisión de apertura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>