force-app/main/default/objects/Opportunity/fields/CIBE_RARConjunto__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RARConjunto__c</fullName>
    <description>Cálculo de la rentabilidad aplicada \ riesgo de las operaciones propuestas. Integración RAR.</description>
    <label>RAR operación(es)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>