force-app/main/default/objects/Opportunity/fields/CIBE_RARGarantias__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RARGarantias__c</fullName>
    <description>Descripción de la garantía principal. Integración RAR.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Garantías</label>
    <length>255</length>
    <type>Text</type>
</CustomField>