force-app/main/default/objects/Opportunity/fields/CIBE_RARIndiceReferencia__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RARIndiceReferencia__c</fullName>
    <description>Índice de referencia de la operación. Integración RAR.</description>
    <label>Índice de referencia</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>