force-app/main/default/objects/Opportunity/fields/CIBE_RARInteresDiferencial__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RARInteresDiferencial__c</fullName>
    <description>Interés diferencial de la operación. Integración RAR.</description>
    <label>Tipo interés/diferencial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>