force-app/main/default/objects/Opportunity/fields/CIBE_RARMargenDiario__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RARMargenDiario__c</fullName>
    <description>Suma de las rentabilidades netas del proyecto \ operaciones</description>
    <label>Margen ordinario</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>