force-app/main/default/objects/Opportunity/fields/CIBE_RARNomOperacion__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RARNomOperacion__c</fullName>
    <description>Alias/nombre que el gestor le pone a la operación para detectarla en la simulación. Integración RAR.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Operación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>